# Evo4mixer

./: .gitignore  99-audient-evo.rules  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/: Cargo.toml  index.html  style.css
frontend/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_monitor.rs  main.rs  usb_device.rs
src/components/: Fader.tsx
