[package]
name = "evo4-mixer-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "InputEvent", "EventTarget", "console"] }
console_error_panic_hook = "0.1"
serde_json = "1.0"
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"
