[package]
name = "evo4mixer"
version = "0.1.0"
description = "Audient EVO 4 mixer for Linux"
authors = ["subsubl"]
edition = "2021"

[lib]
name = "evo4_mixer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = "0.9"
cpal = "0.15"
alsa = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }
